<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".UI.OAuth.OAuthActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/ToolbarTheme"
        android:minHeight="?attr/actionBarSize"></android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_oauthbutton_margin_top"
        android:layout_marginLeft="@dimen/layout_oauthbutton_margin_left"
        android:layout_marginRight="@dimen/layout_oauthbutton_margin_left"
        android:layout_marginTop="@dimen/layout_oauthbutton_margin_top"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/oauth_text"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:textSize="@dimen/textSize_normal"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/layout_oauthbutton_padding">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_webview"
                    android:background="@color/colorPrimary"
                    android:text="@string/oauth_text2"
                    android:textColor="@color/colorWhite"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oauth_base"
        android:textColor="@color/colorBlack"
        android:layout_marginLeft="@dimen/layout_oauthbutton_margin_left"
        android:layout_marginRight="@dimen/layout_oauthbutton_margin_left" />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_oauthbutton_margin_top"
        android:layout_marginLeft="@dimen/layout_oauthbutton_margin_left"
        android:layout_marginRight="@dimen/layout_oauthbutton_margin_left"
        android:layout_marginTop="@dimen/layout_oauthbutton_margin_top"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/oauth_login1"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:textSize="@dimen/textSize_normal"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/layout_oauthbutton_padding">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/editText"
                        android:inputType="text"
                        android:hint="@string/oauth_login1"/>
                </android.support.design.widget.TextInputLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_login"
                    android:background="@color/colorPrimary"
                    android:text="@string/oauth_login2"
                    android:textColor="@color/colorWhite"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
